<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


    <include layout="@layout/include_home_tablout" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



</RelativeLayout>
